--- a/node4j_test_generate_info_to_database.ipynb
+++ b/node4j_test_generate_info_to_database.ipynb
@@ -16,6 +16,8 @@
     }
    ],
    "source": [
+    "#se https://www.youtube.com/channel/UCrhuObZ5WapG0CydaD8wpEA/videos https://www.youtube.com/watch?v=yluHRteVBNI\n",
+    "\n",
     "\n",
     "#generate financial transaction \n",
     "\n",
@@ -228,12 +230,71 @@
    "id": "b209b2ec",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "##### Return values from Neo4j to be used as inputs to next function\n",
+    "\n",
+    "from neo4j import GraphDatabase\n",
+    "\n",
+    "unique_transaction_types = [\"match (t:Transaction) return distinct t.transaction_type\"]\n",
+    "\n",
+    "def execute_transactions(transaction_execution_commands, return_result = False):\n",
+    "    data_base_connection = GraphDatabase.driver(uri = \"bolt://localhost:7687\", auth=(\"neo4j\", \"password\"))\n",
+    "    session = data_base_connection.session()\n",
+    "    return_list = []\n",
+    "    \n",
+    "    for i in transaction_execution_commands:\n",
+    "        transaction_result = session.run(i)\n",
+    "        return_list = [j[0] for j in transaction_result]\n",
+    "    \n",
+    "    if return_result:\n",
+    "        return return_list\n",
+    "\n",
+    "        \n",
+    "unique_transaction_results = execute_transactions(unique_transaction_types, True)\n",
+    "print(unique_transaction_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "871f0580",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c0947c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#Create custom labels for each node representing its transaction type\n",
+    "\n",
+    "create_labels_commands = []\n",
+    "\n",
+    "for i in unique_transaction_results:\n",
+    "    create_labels_commands.append(\"match (t:Transaction) where t.transaction_type = '\" + i + \"' set t :\" + i )\n",
+    "    \n",
+    "print(create_labels_commands)\n",
+    "\n",
+    "\n",
+    "execute_transactions(create_labels_commands)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1499b3e",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.7 ('env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -248,6 +309,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "bb247ae3d3f36ca3d4105d5e2e7866c13aaa21080d4cc3e3f1632e3e914f7464"
+   }
   }
  },
  "nbformat": 4,
